fixed name field focus jumping on creation entity
(cherry picked from commit 5dee216)

--- a/packages/custom/icu/public/assets/css/_entity-list.scss
+++ b/packages/custom/icu/public/assets/css/_entity-list.scss
@@ -137,9 +137,9 @@
                         display: block;
                         line-height: 50px;
                         padding-right: 5px;
-                        padding-left: 0;
                         margin-right: 5px;
                         margin-left: 25px;
+                        padding-left: 10px;
                         &:before {
                             font-weight: normal;
                             font-style: italic;
